--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>STATIC RESUME BUILER by Laiba Ali</h1>
+    <h1>DYNAMIC RESUME BUILER by Laiba Ali</h1>
     <form id="resumeform">
     <fieldset>
         <legend>Personal Information</legend>
@@ -38,5 +38,11 @@
     </fieldset><br>
      <button type="submit">Generate Resume Below</button>
     </form>
+
+    <div id="resumeOutput">
+        <!-- resume will be generated below -->
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
